--- a/package.json
+++ b/package.json
@@ -11,5 +11,16 @@
   "devDependencies": {
     "@types/node": "^18",
     "nuxt": "^3.4.3"
+  },
+  "dependencies": {
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@nuxtjs/tailwindcss": "^6.6.7",
+    "nuxt-editorjs": "^1.0.4"
   }
 }
